--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Lasagna</h1>
-    <img href="../images/lasagna.jpg" />
+    <img src="../images/lasagna.jpg" alt="photo of lasagna" />
     <h2>Description</h2>
     <p>
       Lasagna, with its layers of rich flavors and textures, is a timeless
