Add div with 'content-wrap'

--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -7,40 +7,42 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="photo of lasagna" />
-    <h2>Description</h2>
-    <p>
-      Lasagna, with its layers of rich flavors and textures, is a timeless
-      Italian dish that captivates palates around the world. This culinary
-      masterpiece consists of alternating layers of tender pasta sheets, savory
-      tomato sauce, creamy béchamel, and indulgent cheeses, typically
-      mozzarella, ricotta, and Parmesan. Each layer contributes its own distinct
-      essence, creating a harmonious symphony of taste with every bite. The
-      interplay between the tangy tomato sauce and the velvety béchamel,
-      punctuated by the salty richness of the cheeses, offers a delightful
-      contrast that keeps diners coming back for more. Whether it's a
-      traditional recipe passed down through generations or a modern twist with
-      innovative ingredients, lasagna remains a beloved comfort food cherished
-      for its hearty nature and comforting warmth. Its versatility allows for
-      endless variations, making it suitable for any occasion, from casual
-      family dinners to elegant gatherings. A true culinary classic, lasagna
-      continues to enchant and satisfy discerning appetites worldwide.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Lasagna Noodles</li>
-      <li>Tomato Sauce</li>
-      <li>Ground Beef</li>
-      <li>Ricotta Cheese</li>
-      <li>Salt and Pepper</li>
-    </ul>
-    <ol>
-      <li>Prepare Ingredients</li>
-      <li>Preheat Oven</li>
-      <li>Make the Sauces</li>
-      <li>Assemble the Lasagna</li>
-      <li>Bake the Lasagna</li>
-    </ol>
+    <div class="content-wrap">
+      <h1>Lasagna</h1>
+      <img src="../images/lasagna.jpg" alt="photo of lasagna" />
+      <h2>Description</h2>
+      <p>
+        Lasagna, with its layers of rich flavors and textures, is a timeless
+        Italian dish that captivates palates around the world. This culinary
+        masterpiece consists of alternating layers of tender pasta sheets,
+        savory tomato sauce, creamy béchamel, and indulgent cheeses, typically
+        mozzarella, ricotta, and Parmesan. Each layer contributes its own
+        distinct essence, creating a harmonious symphony of taste with every
+        bite. The interplay between the tangy tomato sauce and the velvety
+        béchamel, punctuated by the salty richness of the cheeses, offers a
+        delightful contrast that keeps diners coming back for more. Whether it's
+        a traditional recipe passed down through generations or a modern twist
+        with innovative ingredients, lasagna remains a beloved comfort food
+        cherished for its hearty nature and comforting warmth. Its versatility
+        allows for endless variations, making it suitable for any occasion, from
+        casual family dinners to elegant gatherings. A true culinary classic,
+        lasagna continues to enchant and satisfy discerning appetites worldwide.
+      </p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>Lasagna Noodles</li>
+        <li>Tomato Sauce</li>
+        <li>Ground Beef</li>
+        <li>Ricotta Cheese</li>
+        <li>Salt and Pepper</li>
+      </ul>
+      <ol>
+        <li>Prepare Ingredients</li>
+        <li>Preheat Oven</li>
+        <li>Make the Sauces</li>
+        <li>Assemble the Lasagna</li>
+        <li>Bake the Lasagna</li>
+      </ol>
+    </div>
   </body>
 </html>
