--- a/odin-recipes/recipes/pizza.html
+++ b/odin-recipes/recipes/pizza.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="content-wrap">
     <h1>Pizza</h1>
     <img src="../images/pizza.jpg" alt="photo of pizza" />
     <h2>Description</h2>
@@ -38,5 +39,6 @@
       <li>Prepare the Toppings</li>
       <li>Bake the Pizza</li>
     </ol>
+  </div>
   </body>
 </html>
