--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -9,7 +9,17 @@
   <body>
     <div class="header"></div>
     <div class="hero-section"></div>
-    <div class="info-section"></div>
+    <div class="info-section">
+      <h2>Some random information.</h2>
+      <div class="info-card">card</div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="info-card">card</div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="info-card">card</div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="info-card">card</div>
+      <p>this is some subtext under an illustration or image</p>
+    </div>
     <div class="quote-section">
       <p>
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
