Add div, ul, li, and a elements to create header section

--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header"></div>
+    <div class="header">
+        <div>Header Logo</div>
+        <ul>
+            <li><a href="google.com">header link one</a></li>
+            <li><a href="google.com">header link two</a></li>
+            <li><a href="google.com">header link three</a></li>
+        </ul>
+    </div>
     <div class="hero-section">
       <h1>This website is awesome</h1>
       <p>
