Add header-logo class and stylize header section

--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div class="header">
-        <div>Header Logo</div>
-        <ul>
-            <li><a href="google.com">header link one</a></li>
-            <li><a href="google.com">header link two</a></li>
-            <li><a href="google.com">header link three</a></li>
-        </ul>
+      <div class="header-logo">Header Logo</div>
+      <ul>
+        <li><a href="google.com">header link one</a></li>
+        <li><a href="google.com">header link two</a></li>
+        <li><a href="google.com">header link three</a></li>
+      </ul>
     </div>
     <div class="hero-section">
       <h1>This website is awesome</h1>
