--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -16,13 +16,15 @@
       </ul>
     </div>
     <div class="hero-section">
-      <h1>This website is awesome</h1>
-      <p>
-        This website has some subtext that goes here under the main title. It's
-        a smaller font and the color is lower contrast
-      </p>
-      <button>Sign up</button>
-      <div>this is a placeholder for an image</div>
+      <div class="hero-section-text">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button>Sign up</button>
+      </div>
+      <div class="hero-section-image">this is a placeholder for an image</div>
     </div>
     <div class="info-section">
       <h2>Some random information.</h2>
