--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -38,12 +38,12 @@
       <p>this is some subtext under an illustration or image</p>
     </div>
     <div class="quote-section">
-      <p>
+      <p class="quote">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
         All I know is that it looks nice.
       </p>
-      <p>-Thor, God of Thunder</p>
+      <p class="quote-author">-Thor, God of Thunder</p>
     </div>
     <div class="cta-section">
       <div class="cta-card">
