--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -47,8 +47,12 @@
     </div>
     <div class="cta-section">
       <div class="cta-card">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="cta-card-text">
+          <h2>Call to action! It's time!</h2>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
         <button>Sign up</button>
       </div>
     </div>
