--- a/odin-landing-page/index.html
+++ b/odin-landing-page/index.html
@@ -28,14 +28,24 @@
     </div>
     <div class="info-section">
       <h2>Some random information.</h2>
-      <div class="info-card">card</div>
-      <p>this is some subtext under an illustration or image</p>
-      <div class="info-card">card</div>
-      <p>this is some subtext under an illustration or image</p>
-      <div class="info-card">card</div>
-      <p>this is some subtext under an illustration or image</p>
-      <div class="info-card">card</div>
-      <p>this is some subtext under an illustration or image</p>
+      <div class="info-card-container">
+        <div class="info-card">
+          <div class="info-card-image"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-card">
+          <div class="info-card-image"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-card">
+          <div class="info-card-image"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info-card">
+          <div class="info-card-image"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
     </div>
     <div class="quote-section">
       <p class="quote">
