Add Rock, Paper, Scissor Buttons + Status Div

--- a/odin-rock-paper-scissors/index.html
+++ b/odin-rock-paper-scissors/index.html
@@ -7,6 +7,12 @@
     <script src="./script.js" async></script>
   </head>
   <body>
-    <h1>See console.</h1>
+    <h1>It's time to play.</h1>
+    <button id="rockButton">rock</button>
+    <button id="paperButton">paper</button>
+    <button id="scissorsButton">scissors</button>
+    <div id="roundStatus"></div>
+    <div id="gameStatus"></div>
+    <div></div>
   </body>
 </html>
