Add reset grid size button

--- a/odin-etch-a-sketch/index.html
+++ b/odin-etch-a-sketch/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style.css"></link>
   </head>
   <body>
-    <div class="container">Container</div>
+    <button id="resetButton">Reset Grid Size</button>
+    <div class="container">
+    </div>
   </body>
 </html>
