--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -8,6 +8,27 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calc-container">
+        <div class="calc-container-screen">2000</div>
+        <div class="calc-container-interact">
+            <button>AC</button>
+            <button>+/-</button>
+            <button>/</button>
+            <button>*</button>
+            <button>-</button>
+            <button>+</button>
+            <button>0</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+        </div>
+    </div>
+
 </body>
 </html>
