--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -13,20 +13,21 @@
         <div class="calc-container-interact">
             <button>AC</button>
             <button>+/-</button>
-            <button>/</button>
-            <button>*</button>
-            <button>-</button>
-            <button>+</button>
-            <button>0</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button class="operator">*</button>
+            <button class="operator">/</button>
+            <button class="operand">7</button>
+            <button class="operand">8</button>
+            <button class="operand">9</button>
+            <button class="operator">-</button>
+            <button class="operand">4</button>
+            <button class="operand">5</button>
+            <button class="operand">6</button>
+            <button class="operator">+</button>
+            <button class="operand">1</button>
+            <button class="operand">2</button>
+            <button class="operand">3</button>
+            <button class="operator">=</button>
+            <button class="operand">0</button>
         </div>
     </div>
 
