Make screen size dynamic by allowing user to input digits onto screen

--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calc-container">
-        <div class="calc-container-screen">2000</div>
+        <div class="calc-container-screen"></div>
         <div class="calc-container-interact">
             <button>AC</button>
             <button>+/-</button>
