Add increased functionality for calculator (plan to scrap & start over)

--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -11,8 +11,8 @@
     <div class="calc-container">
         <div class="calc-container-screen"></div>
         <div class="calc-container-interact">
-            <button>AC</button>
-            <button>+/-</button>
+            <button id="clearButton">AC</button>
+            <button id="signButton">+/-</button>
             <button class="operator">*</button>
             <button class="operator">/</button>
             <button class="operand">7</button>
