--- a/odin-sign-up-form/index.html
+++ b/odin-sign-up-form/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Sign-Up Form</title>
   </head>
-  <body></body>
+  <body>
+    <div class="img-section">Img</div>
+    <div class="info-section">Info</div>
+  </body>
 </html>
