Create img section, import serif font, download coffee asset

--- a/odin-sign-up-form/index.html
+++ b/odin-sign-up-form/index.html
@@ -7,7 +7,7 @@
     <title>Sign-Up Form</title>
   </head>
   <body>
-    <div class="img-section">Img</div>
+    <div class="img-section"><div class="img-banner">MyCoffee</div></div>
     <div class="info-section">Info</div>
   </body>
 </html>
