Add html for info section

--- a/odin-sign-up-form/index.html
+++ b/odin-sign-up-form/index.html
@@ -8,6 +8,22 @@
   </head>
   <body>
     <div class="img-section"><div class="img-banner">MyCoffee</div></div>
-    <div class="info-section">Info</div>
+    <div class="info-section">
+      <h1>
+        This is not a real online service! You know you need something like this
+        in your life to help you realize you deepest dreams. Sign up
+        <em>now</em> to get started. <br /><br />You <em>know</em> you want to.
+      </h1>
+      <form action="">
+        <fieldset>
+          <p>Let's do this!</p>
+          <label for=""></label for="fName">FIRST NAME<input type="text" id="fName" />
+          <label for=""></label for="lName">LAST NAME<input type="text" id="lName" />
+          <label for=""></label for="email">EMAIL<input type="text" id="email" />
+        </fieldset>
+        <button type="submit">Create Account</button>
+      </form>
+      <p>Already have an account? <span><a href="">Log In</a></span></p>
+    </div>
   </body>
 </html>
