Change color scheme + finalize layout for header

--- a/odin-admin-dashboard/index.html
+++ b/odin-admin-dashboard/index.html
@@ -7,6 +7,19 @@
     <title>Dashboard</title>
   </head>
   <body>
+    <header>
+      <div class="header-search"><div class="search-bar">Search...</div></div>
+      <div class="header-notify">You have no new notifications</div>
+      <div class="header-welcome">
+        <p>Welcome,</p>
+        <p class="name">Julian Ordaz</p>
+      </div>
+      <div class="header-cta">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
+    </header>
     <nav>
       <div class="nav-logo">DASHBOARD</div>
       <div class="nav-links">
@@ -27,7 +40,6 @@
         </ul>
       </div>
     </nav>
-    <header>Header</header>
     <main>Main</main>
   </body>
 </html>
