Layout main section of admin dashboard

--- a/odin-admin-dashboard/index.html
+++ b/odin-admin-dashboard/index.html
@@ -40,6 +40,13 @@
         </ul>
       </div>
     </nav>
-    <main>Main</main>
+    <main>
+      <div class="project-section"><p>Projects</p></div>
+      <div class="announcement-section">
+        <p>Announcements</p>
+        <div class="announcement-card">Card</div>
+      </div>
+      <div class="trending-section"><p>Trending</p></div>
+    </main>
   </body>
 </html>
