Create HTML & CSS layout for library app

--- a/odin-library/index.html
+++ b/odin-library/index.html
@@ -6,5 +6,46 @@
     <link rel="stylesheet" href="style.css" />
     <title>Library</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Your Library</h1>
+    <form>
+      <label for="title">Book Title</label>
+      <input type="text" id="title" placeholder="Enter title" />
+      <label for="title">Book Author</label>
+      <input type="text" id="author" placeholder="Enter author" />
+      <label for="title">Book Page Count</label>
+      <input type="text" id="pages" placeholder="Enter page count" />
+      <button>Add Book</button>
+    </form>
+    <section>
+      <div class="book-card">
+        <h2>East of Eden</h2>
+        <p>John Steinbeck</p>
+        <p>600 pages</p>
+        <button class="read-button">Mark as Read</button>
+        <button class="delete-button">Delete</button>
+      </div>
+      <div class="book-card">
+        <h2>East of Eden</h2>
+        <p>John Steinbeck</p>
+        <p>600 pages</p>
+        <button class="read-button">Mark as Read</button>
+        <button class="delete-button">Delete</button>
+      </div>
+      <div class="book-card">
+        <h2>East of Eden</h2>
+        <p>John Steinbeck</p>
+        <p>600 pages</p>
+        <button class="read-button">Mark as Read</button>
+        <button class="delete-button">Delete</button>
+      </div>
+      <div class="book-card">
+        <h2>East of Eden</h2>
+        <p>John Steinbeck</p>
+        <p>600 pages</p>
+        <button class="read-button">Mark as Read</button>
+        <button class="delete-button">Delete</button>
+      </div>
+    </section>
+  </body>
 </html>
