Add basic functionality to add book form submissions as objects to myLibray array

--- a/odin-library/index.html
+++ b/odin-library/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Library</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
       <input type="text" id="author" placeholder="Enter author" />
       <label for="title">Book Page Count</label>
       <input type="text" id="pages" placeholder="Enter page count" />
-      <button>Add Book</button>
+      <button class="submit-button">Add Book</button>
     </form>
     <section>
       <div class="book-card">
