--- a/odin-library/index.html
+++ b/odin-library/index.html
@@ -18,14 +18,6 @@
       <input type="text" id="pages" placeholder="Enter page count" />
       <button class="submit-button">Add Book</button>
     </form>
-    <section>
-      <div class="book-card">
-        <h2>East of Eden</h2>
-        <p>John Steinbeck</p>
-        <p>600 pages</p>
-        <button class="read-button">Mark as Read</button>
-        <button class="delete-button">Delete</button>
-      </div>
-    </section>
+    <section></section>
   </body>
 </html>
